--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+ 
+  "overrides": {
+     "react-devtools-core": "~4.25.0"
+  }
+
 }
