--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "photo-traveler",
-    "slug": "photo-traveler",
+    "slug": "goit-rn-hw",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
